# gcpde

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: main.yaml  release-drafter.yml  release.yml
.kin/: .gitignore  code-map.json  config  index.json
gcpde/: base.py  bq.py  gcs.py  sheets.py  types.py
tests/unit/: test_bq.py  test_gcs.py  test_sheets.py
